--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="d-flex flex-column align-items-center">
                         <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
                         <div class="text-muted">Phone</div>
-                        <div class="lead font-weight-bold">(+32) 0478 28 17 38</div>
+                        <div class="lead font-weight-bold"><a href="00324795587">(+32) 0479 55 87</a></div>
                     </div>
                 </div>
                 <div class="col-lg-4">
