Fix logo to width
Usse img-fluid to make it fix smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     </nav>
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
-            <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/logo_transparent.PNG" alt="">
+            <!-- Masthead Avatar Image-->
+            <!--<img class="masthead-avatar mb-5" src="assets/img/logo_transparent.PNG" alt="">-->
+            <div class="col-md-9 px-0">
+                <img src="assets/img/logo_transparent.PNG" class="img-fluid" alt="Allround Repair logo">
+            </div>
             <!-- Masthead Heading-->
             <!--<h1 class="masthead-heading mb-0">START BOOTSTRAP</h1>-->
             <!-- Icon Divider-->
