Update adres to address
Let's keep everything in english

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="row">
                 <!-- Footer Location-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="mb-4">ADRES</h4>
+                    <h4 class="mb-4">ADDRESS</h4>
                     <p class="pre-wrap lead mb-0">Pastoorslindestraat 37
 3620 Lanaken</p>
                 </div>
