--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <meta name="description" content="Allround repair homepage">
+    <meta name="author" content="Thomas Panis">
+    <meta name="keywords" content="repair,maintenance,improvements,construction,handyman">
+    <title>Allround Repair</title>
     <!-- Font Awesome icons (free version)-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         crossorigin="anonymous"></script>
