--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
                 <!-- Footer Location-->
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <h4 class="mb-4">ADDRESS</h4>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Allround+Repair,+Pastoorslindestraat+37,+3620+Lanaken,+Belgium">
                     <p class="pre-wrap lead mb-0">Pastoorslindestraat 37
-3620 Lanaken</p>
+3620 Lanaken
+Belgium</p></a>
                 </div>
                 <!-- Footer Social Icons-->
                 <!--<div class="col-lg-4 mb-5 mb-lg-0">
