--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@ Belgium</p></a>
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyARzRVuM-TXfaEhX58Yt-vED-7EFGx3p6w",
+            authDomain: "allround-repair.firebaseapp.com",
+            projectId: "allround-repair",
+            storageBucket: "allround-repair.appspot.com",
+            messagingSenderId: "531407346048",
+            appId: "1:531407346048:web:846f28b2441082561e0965"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </body>
 
 </html>
